--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -42,3 +42,7 @@
   padding-right: 10rem;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
+.footer {
+  background-color: #0f315e;
+  color: white;
+}
